# ARGOS

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  Tareas_a_realizar.md  argos.bat  docker-compose.yml  pyproject.toml  run_agent.ps1  run_argos.bat  run_server.ps1  start_argos.bat
.github/workflows/: ci.yml
.kilo/agent/: AGENTS.md  argos-build.md  argos-next-phase.md  argos-production.md
Docs/: ARQUITECTURA_TECNICA_MEJORADA.md  BUILD_LOG.md  ESPECIFICACION_MCP.md  Estado_Implementacion.md  GUIA_INTEGRACION_PROMPTS_GROK.md  GUIA_MEJORAS_DASHBOARD.md  GUIA_MIGRACION_PLUGINS.md  IA_Local_Descargar.md  PLAN_MAESTRO_TRANSFORMACION_XAI.md  README.md  ROADMAP_IMPLEMENTACION.md  SEGURIDAD_VALIDACION.md
Docs/Documentacion_Tecnica/: 00-Indice-Maestro.md  01-Resumen-Ejecutivo.md  02-Requisitos-Funcionales.md  03-Requisitos-No-Funcionales.md  04-Arquitectura.md  05-Arquitectura-Carpetas.md  06-Arquitectura-Codigo.md  07-Flujo-General.md  08-API-Gateway.md  09-Integracion-IA.md  10-Configuracion-Local.md  (+22 more)
argos/: __init__.py  agent.py  cli.py  config.py  logging_setup.py  ocsf.py  scheduler.py  server.py  voice_jarvis.py  windows_service.py
chat-ui/: app.js  index.html  style.css
dashboard/: index.html
tests/: test_auth.py  test_autonomy.py  test_core.py  test_dashboard.py  test_e2e.py  test_fuzz.py  test_integration.py  test_local_brain.py  test_mcp_gateway.py  test_memory.py  test_observability.py  test_plugins.py  test_production.py  test_prompts.py  test_refactor_xai.py  test_resilience.py  test_server.py  test_voice_jarvis.py
tools/: launch.py
(+163 files in other folders)
