[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argos"
version = "0.1.0"
description = "ARGOS - Sistema Agéntico de Observabilidad Total y Ciberdefensa Autónoma Multiplataforma"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Lucho" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "ruff>=0.4",
    "yara-python>=4.3",
]

[project.scripts]
argos-server = "argos.server:main"
argos-agent = "argos.agent:main"
argos-cli = "argos.cli:main"
argos-voice = "argos.voice_jarvis:main"

[tool.setuptools.packages.find]
include = ["argos*"]

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
